<resources>
    <string name="app_name">Tik Tak Toe</string>
    <string name="play_offline">Play Offline</string>
    <string name="play_online">Create Online</string>
    <string name="join_game">Join Game</string>
    <string name="join_game_code">Enter Game Code</string>
    <string name="game_not_started">Game Not Started</string>
    <string name="x">X</string>
    <string name="start_game">Start Game</string>
    <string name="o">O</string>
</resources>