<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    title bar-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tic Tac Toe"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/playOffline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_offline"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/playOnline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_online"
        app:layout_constraintTop_toBottomOf="@id/playOffline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"/>


<!--    join game using code-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/joinGameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/playOnline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/joinGameCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/join_game_code"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/joinGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        app:layout_constraintTop_toBottomOf="@id/joinGameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"/>


  </androidx.constraintlayout.widget.ConstraintLayout>