<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/gameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_not_started"
        android:textSize="23sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gameGrid"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="10dp"
        app:columnCount="3"
        app:rowCount="3"
        app:layout_constraintTop_toBottomOf="@id/gameStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textSize="60sp"
            android:layout_margin="5dp"
            android:tag="1"
            android:onClick="onButtonClick"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:tag="2"
            android:text="@string/x"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:tag="3"
            android:text="@string/x"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:tag="4"
            android:text="@string/x"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:tag="5"
            android:text="@string/x"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:tag="6"
            android:text="@string/x"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:tag="7"
            android:text="@string/x"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:tag="8"
            android:text="@string/x"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:tag="9"
            android:text="@string/x"
            android:textSize="60sp" />




    </androidx.gridlayout.widget.GridLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        app:layout_constraintTop_toBottomOf="@id/gameGrid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>